# knowledge-engineering

./: .c8rc.json  .env.defaults  .gitignore  .gitmodules  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  HANDOFF.md  PRODUCTRD.md  README.md  RUNBOOK.md  SUBPROCESSORS.md  audit_container_results.jsonl  deploy-subdomains.sh  docker-compose.yml  package-lock.json  package.json  release-please-config.json  setup.sh  tsconfig.json
.claude/: loop.md  managed-settings.example.json  plugins.json  settings.json
.claude-plugin/: marketplace.json
.claude/mailbox/: agent_orchestrator.jsonl
.claude/rules/: pr-ops.md
.claude/skills/: cowork-setup.skill  (+13 more)
.codex/: config.toml  hooks.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
apps/admin-api/: pyproject.toml
apps/admin-api/src/ke_admin_api/: __init__.py  main.py  models.py  routes.py
apps/admin-api/tests/: test_admin_models.py
apps/api-core/: pyproject.toml
apps/api-core/src/ke_api_core/: __init__.py  beta.py  cache.py  plugin_schema.py  plugin_schema.test.py  projects.py  tracing.py
apps/api-core/tests/: conftest.py  test_batches.py  test_cache.py  test_messages.py  test_projects.py  test_tracing.py
apps/compliance-api/: pyproject.toml
apps/compliance-api/src/ke_compliance_api/: __init__.py  main.py  routes.py
apps/compliance-api/tests/: conftest.py  test_compliance.py
apps/fivetran-bridge/: pyproject.toml
apps/fivetran-bridge/src/ke_fivetran_bridge/: connector.py  models.py
apps/fivetran-bridge/src/ke_fivetran_bridge/connectors/: anthropic_usage.py  cloudflare_workers.py
apps/fivetran-bridge/tests/: test_connector.py
container/: claude-on-mobile.mdx  claude-on-web.mdx  doctor.sh  setup.sh
cowork/templates/: Cargo.toml  rerank-cli.py  rerank-engine.ts  task-models.py  task-state-machine.test.ts  task-state-machine.ts  test_task_models.py
cowork/templates/cache-bench/: Cargo.toml
cowork/templates/cache-bench/benches/: rerank_bench.rs
cowork/templates/priority-queue/: Cargo.toml
cowork/templates/priority-queue/src/: main.rs
coworkers/: CONVENTIONS.md
docs/: CONVENTIONS.md  PROJECT.md  architecture.md  cloud-bringup-decomposition.md  cloudflare-ai-free-tier.md  context-management.md  docs.json  governance.md  index.md  mintlify-strategy.md  pending-prs.md  pending.md  phase-gates.md  quickstart.md  rubric.md  security.md  session-2026-05-10.md  session-artifact.md  unblock-sequence.md
enterprise-mirror/: README.md  bootstrap-wsl.sh  setup.sh
frontend/: .gitignore  CHANGELOG.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
mail/: README.md
migrations/: 0001_vendor_pages.sql  README.md
okf/: README.md  SPEC.md  e2m-okf.schema.json
ollama/: .last-good.yaml  AUTH-LANES.md  README.md  autoresolve.py  contract.example.yaml  contract.py  contract.yaml  install.yaml  mac-bootstrap.sh  test_contract.py
operator/: agent_claude_blog_tool.json  claude-blog-content.md  claude_blog_urls_full.json  cloudflare-nav.schema.ts  cloudflare-nav.yaml  platform-settings.config.ts  platform-settings.config.yaml
organizations/: fivetran-anthropic-claude.test.ts
rubrics/: phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md  phase-A.md  phase-A2A.md  phase-B.md  phase-BLOG.md  phase-C.md  phase-E.md  phase-H.md  phase-I.md
schema/: ke.graphql
schemas/: fivetran-table-semantics.schema.json  table-semantics.schema.json
scripts/: apply-identity-profiles.sh  audit-neon-extensions.ts  audit-sitemap-coverage.ts  audit_container.py  build-plugin-cache.ts  bump-refs.sh  check-agent-costs.ts  check-goals.ts  ci-cancel-fix.patch  context-budget.ts  crawl-anduril-www.ts  crawl-github.ts  crawl-registries.ts  crawl-targets.json  crawl-vendor-audit.ts  crawl-vendors.ts  deterministic-review.ts  discover-sources.ts  dreams-consolidate.ts  eval-citation-rubric.ts  fetch-cloudflare-docs.sh  gen-pr-queue.ts  generate-server-tree.ts  generate-session-cost.ts  ghostty-config-test.sh  grade-phase.test.ts  grade-phase.ts  harvest-admonitions.test.ts  harvest-admonitions.ts  incremental-crawl.ts  ingest-citations.ts  ingest-vendor-pages.ts  install-plugins.test.ts  install-plugins.ts  load-citation-warehouse.ts  load-ecosystem-catalog.ts  load_project_env.sh  memory-migrate.ts  migrate-neon.ts  mint-cf-ci-token.ts  (+35 more)
seeds/: discovered-sources.json
servers/: _client.ts
servers/kg-api/: conftest.py  pyproject.toml
servers/kg-api/migrations/: 0002_kg_tables.sql  alembic.ini  env.py
servers/kg-api/migrations/versions/: 0002_kg_tables.py
servers/kg-api/src/ke_kg_api/: __init__.py  cache.py  mcp_server.py  models.py  tracing.py
servers/kg-api/src/ke_kg_api/anthropic_api/: __init__.py  admin.py  batches.py  beta.py  compliance.py  managed_agents.py  messages.py  models_api.py
servers/kg-api/src/ke_kg_api/api/: main.py
servers/kg-api/src/ke_kg_api/db/: base.py  orm.py  redis_cache.py  repo.py
servers/kg-api/src/ke_kg_api/graphql/: schema.py
servers/kg-api/tests/: test_anthropic_api.py  test_cache.py  test_graphql.py  test_models.py  test_tracing.py
(+2169 files in other folders)
