[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ke-compliance-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ke-api-core @ file://../api-core",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ke_compliance_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
