# cowork/templates Rust workspace — priority-queue + cache-bench
# @cite cowork/skills/plugins/product-management:priority-rerank/SKILL.md
# @cite src/cache/lru-bm25.ts (mirrors L1/L2 pattern in Rust)

[workspace]
resolver = "2"
members  = ["priority-queue", "cache-bench"]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["admin@jadecli.com"]
repository  = "https://github.com/knowledge-engineering"

[workspace.dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
thiserror     = "2"
criterion     = { version = "0.5", features = ["html_reports"] }
lru           = "0.12"
ahash         = "0.8"    # faster HashMap hasher than SipHash for non-crypto keys
